# Quijote-Simulations-Delaunay

./: .gitignore  001_crear_grafos_fof.ipynb  002_calculate_metrics_based_on_graphs.ipynb  003_plots.ipynb  README.md  calc_metrics_multicore.py  calc_metrics_muticore.py  consolidate_individual_metrics.py  create_graphs.py  merge_metrics.py  pyproject.toml  requirements.txt
quijote/: unzip_all.sh
