[project]
name = "delaunay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igraph==0.11.6",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pylians>=0.12",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]
